2012-11-01  David Edelsohn  <dje.gcc@gmail.com>

	* gcc.target/powerpc/vsx-mass-1.c: Check for dot symbols in
	scan-assembler regex.

2012-11-01  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/55150
	* gcc.dg/pr55150.c: Rename to gcc.dg/pr55150-1.c.
	* gcc.dg/pr55150-2.c: New test.

2012-11-01  Sharad Singhai  <singhai@google.com>

	* testsuite/gcc.dg/plugin/selfassign.c: Add opgtroup_flags initializer.
	* testsuite/gcc.dg/plugin/one_time_plugin.c: Likewise.
	* testsuite/g++.dg/plugin/selfassign.c: Likewise.
	* testsuite/g++.dg/plugin/dumb_plugin.c: Likewise.

2012-10-31  Dehao Chen  <dehao@google.com>

	* g++.dg/debug/dwarf2/block.C: New testcase.

2012-10-31  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/pr44974.c: Add noinline.

2012-10-31  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/53718
	* gfortran.dg/class_54.f90: New.

2012-10-31  Steven Bosscher  <steven@gcc.gnu.org>
	    Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/55018
	* gcc.dg/torture/pr55018.c: New test.

2012-10-31  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/54583
	* g++.dg/ext/vla13.C: New.

2012-10-31  Vladimir Makarov  <vmakarov@redhat.com>

	PR middle-end/55150
	* gcc.dg/pr55150.c: New test.

2012-10-31  Tobias Burnus  <burnus@net-b.de>

	PR fortran/55134
	* gfortran.dg/associate_11.f90: New.

2012-10-31  Dodji Seketeli  <dodji@redhat.com>

	PR c++/54955
	* g++.dg/cpp0x/gen-attrs-48-2.C: New test.

2012-10-31  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/19105
	PR tree-optimization/21643
	PR tree-optimization/46309
	* gcc.dg/pr19105.c: New test.
	* gcc.dg/pr21643.c: New test.
	* gcc.dg/pr46309-2.c: New test.
	* gcc.c-torture/execute/pr46309.c: New test.

2012-10-31  Alan Modra  <amodra@gmail.com>

	* gcc.target/powerpc/dimode_off.c: New.
	* gcc.target/powerpc/timode_off.c: New.
	* gcc.target/powerpc/dfmode_off.c: New.
	* gcc.target/powerpc/tfmode_off.c: New.

2012-10-30  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/55093